--- a/app/index.tpl.html
+++ b/app/index.tpl.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>react-kickstart</title>
-    <meta name="description" content="just another react + webpack boilerplate">
+    <title>Jukebot</title>
+    <meta name="description" content="just your average neighborhood chatbot">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
